# kanbito

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
assets/: kanbito.icns
scripts/: build-linux.sh  build-mac.sh  build-windows.bat  build-windows.ps1  build.py
src/kanbito/: __init__.py  __main__.py  app.py  entry.py  git_sync.py  server.py
src/kanbito/static/: app.js  i18n.js  notes.js  style.css
src/kanbito/static/locales/: ar.json  bn.json  de.json  en.json  es.json  fa.json  fr.json  he.json  hi.json  id.json  it.json  ja.json  ko.json  pl.json  pt.json  ru.json  tr.json  ur.json  vi.json  zh.json
