[project]
name = "kanbito"
version = "1.0.0"
description = "Kanban board desktop app with notes and git sync"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Franco Matzkin", email = "kanbito@tzk.ar" }
]
keywords = ["kanban", "board", "desktop", "notes", "git"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "flask>=3.0",
    "pywebview>=5.0",
    "pystray>=0.19",
    "pillow>=10.0",
]

[project.scripts]
kanbito = "kanbito.app:main"

[project.gui-scripts]
kanbito = "kanbito.app:main"

[project.urls]
Homepage = "https://tzk.ar"
Repository = "https://github.com/vfmatzkin/kanbito"
Issues = "https://github.com/vfmatzkin/kanbito/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kanbito"]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
